<resources>
    <string name="app_name">Lucferbux</string>
    <string name="nav_home">Home</string>
    <string name="nav_aboutme">Aboutme</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_articles">Posts</string>

    <string name="title_home">Home</string>
    <string name="title_aboutme">About Me</string>
    <string name="title_projects">Projects</string>
    <string name="title_articles">Posts</string>

    <string name="btn_intro_link">Link</string>

    <string name="img_news">Caption Image of News</string>

    <string name="avatar_description">Avatar Image</string>
    <string name="aboutme_title">Lucas Fernández</string>
    <string name="aboutme_caption">DEVELOPER</string>
    <string name="aboutme_description">I love to learn &amp; discover new technologies everyday.</string>



    <string name="job_title_placeholder">Postgraduate Expert in Blockchain and Bitcoin</string>
    <string name="job_date_placeholder">2019 - 2020 </string>
    <string name="job_description_placeholder">Professor of the Security in Blockchain module, where I talk about the main security threats in Blockchain, as well as Smart Contract fortification and multiple system deployments.</string>


    <string name="post_title_placeholder">Cloning Raspberry Pi SD on macOS</string>
    <string name="post_date_placeholder">8 Nov, 2020 </string>
    <string name="post_description_placeholder">This guide shows the steps to clone all the SD content of a Raspberry Pi to back up or dump the content to another device. Also I show a trick to monitor the cloning process that can be very helpful.</string>


    <string name="project_title_placeholder">Lucferbux Web React</string>
    <string name="project_tags_placeholder">React, Gatsby, Typescript</string>
    <string name="project_description_placeholder">Personal portfolio developerd with React, Styled Components, Gatsby and modern design patterns</string>
    <string name="project_version_placeholder">0.0.1</string>

</resources>