<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home"
        android:title="@string/nav_home"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/aboutme"
        android:title="@string/nav_aboutme"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/ic_aboutme"/>
    <item android:id="@+id/projects"
        android:title="@string/nav_projects"
        app:showAsAction="always"
        android:orderInCategory="3"
        android:icon="@drawable/ic_projects"/>

    <item android:id="@+id/articles"
        android:title="@string/nav_articles"
        app:showAsAction="always"
        android:orderInCategory="4"
        android:icon="@drawable/ic_articles"/>
</menu>