<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <variable
            name="jobData"
            type="com.lucferbux.lucferbux.data.Work"
            />



    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/person_img"
            imageUrlRounded="@{jobData.avatar}"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_job_placeholder" />

        <TextView
            android:id="@+id/job_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:text="@{jobData.name_en}"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/lbl_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/person_img"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/job_title_placeholder" />

        <TextView
            android:id="@+id/job_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:alpha="0.6"
            android:fontFamily="sans-serif-light"
            android:text="@{jobData.job_en}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/lbl_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/job_title"
            app:layout_constraintTop_toBottomOf="@+id/job_title"
            tools:text="@string/job_date_placeholder" />

        <TextView
            android:id="@+id/job_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.7"
            android:text="@{jobData.description_en}"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/lbl_color"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/job_title"
            app:layout_constraintStart_toStartOf="@+id/job_title"
            app:layout_constraintTop_toBottomOf="@+id/job_date"
            tools:text="@string/job_description_placeholder" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>