<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <variable
            name="postData"
            type="com.lucferbux.lucferbux.data.Post"
            />

        <variable
            name="clickListener"
            type="com.lucferbux.lucferbux.ui.articles.PostListener"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="@{() -> clickListener.onclick(postData)}">


        <androidx.cardview.widget.CardView
            android:id="@+id/post_card"
            android:layout_width="92dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/person_img"
                imageUrl="@{postData.image}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/ic_post_placeholder" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/job_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@{postData.title_en}"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/lbl_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/post_card"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/post_card"
            tools:text="@string/post_title_placeholder" />

        <TextView
            android:id="@+id/job_date"
            timestampToDate="@{postData.date}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:alpha="0.6"
            android:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/lbl_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/job_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/job_title"
            app:layout_constraintTop_toBottomOf="@+id/job_title"
            tools:text="@string/post_date_placeholder" />

        <TextView
            android:id="@+id/job_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="17dp"
            android:alpha="0.7"
            android:maxLines="3"
            android:text="@{postData.description_en}"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/lbl_color"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/job_title"
            app:layout_constraintStart_toStartOf="@+id/job_title"
            app:layout_constraintTop_toBottomOf="@+id/job_date"
            tools:text="@string/post_description_placeholder" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>